# project_genius

./: .gitignore  README.md  README_PRODUCTION.md  projectgenius_app.py  pyproject.toml  requirements.txt  routes.py  run_dev.py  run_production.py  setup_production.py  wsgi.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CODEBASE_INDEX.md  CODEBASE_SUMMARY.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  FILE_INVENTORY.md  SETUP_GUIDE.md  product req document.md  promt.md  replit.md  structure.md
migrations/: answers.sql
migrations/versions/: 439ce611760c_initial_migration.py
projectgenius/: __init__.py  models.py  utils.py
projectgenius/api/: __init__.py  assignments.py  courses.py  quizzes.py  users.py
projectgenius/assignments/: models.py
projectgenius/auth/: __init__.py  forms.py  routes.py
projectgenius/core/: __init__.py  cli.py  errors.py  routes.py  security.py
projectgenius/core/config/: __init__.py
projectgenius/courses/: models.py
projectgenius/quizzes/: __init__.py  models.py
projectgenius/services/: __init__.py  ai_service.py  payment_service.py
projectgenius/static/js/: flashcards.js  main.js
projectgenius/templates/: analytics.html  base.html  dashboard.html  flashcards.html  index.html  index_simple.html  register.html  subscription.html
projectgenius/templates/courses/: browse.html  layout.html  overview.html
projectgenius/templates/dashboard/: index.html
projectgenius/templates/errors/: 404.html  505.html
projectgenius/templates/quizzes/: list.html  (+2 more)
tests/: __init__.py  conftest.py  test_auth.py  test_models.py  test_server.py
(+2 files in other folders)
